--- a/my-reddit/src/App.css
+++ b/my-reddit/src/App.css
@@ -38,7 +38,8 @@ h2 {
 }
 
 h3{
-  font-size: .8rem;
+  font-size: 1.3rem;
+  margin-bottom: 1.5rem;
 }
 
 header{
@@ -46,6 +47,13 @@ header{
   padding-top: 1rem;
   padding-bottom: 1rem;
   margin-bottom: 5rem;
+}
+
+input {
+  height: 1.7rem;
+  border: 0;
+  border-radius: .5rem;
+  margin-bottom: .5rem;
 }
 
 .all-posts{
@@ -89,10 +97,9 @@ header{
   flex-wrap: 'wrap';
 }
 
-.edit-post{
+.add-post, .edit-post{
   background-color: #eee;
   padding: 1rem;
-  max-width: 30rem;
   margin-top: 1rem;
   border-radius: .5rem;
 }
@@ -110,11 +117,11 @@ header{
     text-align: center;
 }
 
-.addbutton button{
-  padding: 1rem;
+.button {
+  display: block;
+  margin-top: 2rem;
+  padding: .8rem;
   background-color: dodgerblue;
-  border-radius: .5rem;
   color: white;
-  border: 0;
-  margin-top: 5rem;
+  border-radius: .5rem;
 }
